<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >

        <action android:id="@+id/action_to_learning"
            app:destination="@+id/learningFragment"/>
        <action android:id="@+id/action_to_writing"
            app:destination="@+id/writingFragment"/>
        <action android:id="@+id/action_to_multiplechoice"
            app:destination="@+id/multiplechoiceFragment"/>
        <action android:id="@+id/action_to_flashcard"
            app:destination="@+id/flashcardFragment"/>
        <action android:id="@+id/action_to_listening"
            app:destination="@+id/listeningFragment"/>

    </fragment>

    <fragment
        android:id="@+id/nav_fav"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.hgihscore.HighScoreFragment"
        android:label="@string/menu_highscore"
        tools:layout="@layout/fragment_highscore" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.about.About"
        android:label="About"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_share"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/learningFragment"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.appactivity.LearningFragment"
        android:label="Learning"
        tools:layout="@layout/fragment_learning">
        <action android:id="@+id/action_to_home"
            app:destination="@+id/nav_home"/>
    </fragment>



    <fragment
        android:id="@+id/writingFragment"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.appactivity.WritingFragment"
        android:label="Writing"
        tools:layout="@layout/fragment_writing" >
        <action android:id="@+id/action_to_home"
            app:destination="@+id/nav_home"/>
        <action android:id="@+id/action_to_wrefresh"
            app:destination="@+id/writingFragment"/>
    </fragment>

    <fragment
        android:id="@+id/multiplechoiceFragment"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.appactivity.MultipleChoiceFragment"
        android:label="Multiple Choice"
        tools:layout="@layout/fragment_multiple_choice" >
        <action android:id="@+id/action_to_home"
            app:destination="@+id/nav_home"/>
        <action android:id="@+id/action_to_mrefresh"
            app:destination="@+id/multiplechoiceFragment"/>
    </fragment>
    <fragment
        android:id="@+id/flashcardFragment"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.appactivity.FlashcardFragment"
        android:label="Flash Card"
        tools:layout="@layout/fragment_multiple_choice" >
        <action android:id="@+id/action_to_home"
            app:destination="@+id/nav_home"/>
        <action android:id="@+id/action_to_frefresh"
            app:destination="@+id/flashcardFragment"/>
    </fragment>

    <fragment
        android:id="@+id/listeningFragment"
        android:name="kyawthiha.kt.vocabularytrainingforkids.ui.appactivity.ListeningFragment"
        android:label="Listening"
        tools:layout="@layout/fragment_listening" >
        <action android:id="@+id/action_to_home"
            app:destination="@+id/nav_home"/>
        <action android:id="@+id/action_to_lrefresh"
            app:destination="@+id/listeningFragment"/>
    </fragment>
</navigation>